syntax = "proto3";

package v2ray.core.transport.internet.tlsmirror.mirrorenrollment.roundtripperenrollmentconfirmation;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Tlsmirror.MirrorEnrollment.RoundTripperEnrollmentConfirmation";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/tlsmirror/mirrorenrollment/roundtripperenrollmentconfirmation";
option java_package = "com.v2ray.core.transport.internet.tlsmirror.mirrorenrollment.roundtripperenrollmentconfirmation";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "google/protobuf/any.proto";

message ClientConfig {
  google.protobuf.Any round_tripper_client = 1;
  google.protobuf.Any security_config = 2;
  string dest = 3;
  string outbound_tag = 4;
  bytes server_identity = 5;
}

message ServerConfig {
  google.protobuf.Any round_tripper_server = 2;
  string listen = 3;
}